<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.sansa-stack</groupId>
	<artifactId>sansa-query-parent_2.11</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<!-- <name>${project.artifactId}</name> -->
	<description>SANSA Query Library</description>
	<inceptionYear>2015</inceptionYear>

	<organization>
		<name>Smart Data Analytics (SDA) research group</name>
		<url>http://sda.tech</url>
	</organization>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<encoding>UTF-8</encoding>

		<sansa.version>0.2.0</sansa.version>

		<scala.version>2.11.11</scala.version>
		<scala.binary.version>2.11</scala.binary.version>
		<scala.classifier>${scala.binary.version}</scala.classifier>

		<scala.version.suffix>_${scala.binary.version}</scala.version.suffix>

		<spark.version>2.2.1</spark.version>
		<flink.version>1.4.0</flink.version>

		<jena.version>3.5.0</jena.version>
		<jsa.subversion>2</jsa.subversion>

		<jsa.version>${jena.version}-${jsa.subversion}</jsa.version>
	</properties>

	<modules>
		<module>sansa-query-spark-parent</module>
		<module>sansa-query-flink-parent</module>
	</modules>

	<scm>
		<url>https://github.com/SANSA-Stack/SANSA-Query</url>
		<connection>scm:git:git://github.com/SANSA-Stack/SANSA-Query.git</connection>
		<developerConnection>scm:git:git@github.com:SANSA-Stack/SANSA-Query.git</developerConnection>
	</scm>


	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/SANSA-Stack/SANSA-Query</url>
	</issueManagement>

	<developers>
		<developer>
			<id>Aklakan</id>
			<name>Claus Stadler</name>
			<email>cstadler@informatik.uni-leipzig.de</email>
			<organization>AKSW, Department of Computer Science, University of Leipzig</organization>
			<organizationUrl>http://aksw.org</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>0</timezone>
		</developer>
		<developer>
			<id>sbin</id>
			<name>Simon Bin</name>
			<email>sbin@informatik.uni-leipzig.de</email>
			<organization>AKSW, Department of Computer Science, University of Leipzig</organization>
			<organizationUrl>http://aksw.org</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>0</timezone>
		</developer>
	</developers>

	<profiles>
		<profile>
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>

			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<failOnError>false</failOnError>
								</configuration>
							</execution>
						</executions>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>


		<profile>
			<id>release</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>

			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
					</plugin>

					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<!-- <repository> -->
		<!-- <id>Akka repository</id> -->
		<!-- <url>http://repo.akka.io/releases</url> -->
		<!-- </repository> -->
		<repository>
			<id>oss-sonatype</id>
			<name>oss-sonatype</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>apache-snapshot</id>
			<name>Apache repository (snapshots)</name>
			<url>https://repository.apache.org/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>maven.aksw.internal</id>
			<name>AKSW Release Repository</name>
			<url>http://maven.aksw.org/archiva/repository/internal</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>maven.aksw.snapshots</id>
			<name>AKSW Snapshot Repository</name>
			<url>http://maven.aksw.org/archiva/repository/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty</artifactId>
				<!-- <scope>provided</scope> -->
			</dependency>

			<dependency>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-util</artifactId>
				<!-- <scope>provided</scope> -->
			</dependency>


			<!-- Scala -->
			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-library</artifactId>
				<version>${scala.version}</version>
			</dependency>

			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scala-reflect</artifactId>
				<version>${scala.version}</version>
			</dependency>

			<dependency>
				<groupId>org.scala-lang</groupId>
				<artifactId>scalap</artifactId>
				<version>${scala.version}</version>
			</dependency>

			<dependency>
				<groupId>net.sansa-stack</groupId>
				<artifactId>sansa-rdf-test-resources${scala.version.suffix}</artifactId>
				<version>${project.version}</version>
				<!-- <classifier>${scala.compat.version}</classifier> -->
			</dependency>


			<dependency>
				<groupId>org.aksw.bsbm</groupId>
				<artifactId>bsbm-jsa</artifactId>
				<version>3.1.1</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>19.0</version>
			</dependency>

			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>apache-jena-libs</artifactId>
				<version>${jena.version}</version>
				<type>pom</type>
			</dependency>


			<dependency>
				<groupId>org.aksw.sparqlify</groupId>
				<artifactId>sparqlify-core</artifactId>
				<version>0.8.3</version>
				<exclusions>
					<exclusion>
						<groupId>org.aksw.sparqlify</groupId>
						<artifactId>sparqlify-tests</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.apache.hive</groupId>
						<artifactId>hive-jdbc</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.apache.jena</groupId>
						<artifactId>jena-</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>net.sansa-stack</groupId>
				<artifactId>sansa-rdf-common-partition${scala.version.suffix}</artifactId>
				<version>${project.version}</version>
				<!-- <classifier>${scala.compat.version}</classifier> -->
			</dependency>


			<dependency>
				<groupId>org.aksw.jena-sparql-api</groupId>
				<artifactId>jena-sparql-api-server-standalone</artifactId>
				<version>${jsa.version}</version>
				<exclusions>
<!--
					<exclusion>
						<groupId>xml-apis</groupId>
						<artifactId>xml-apis</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.eclipse.jetty</groupId>
						<artifactId>jetty-xml</artifactId>
					</exclusion>
-->

				</exclusions>
				<!-- <classifier>${scala.compat.version}</classifier> -->
			</dependency>

			<dependency>
				<groupId>org.scalatest</groupId>
				<artifactId>scalatest_${scala.binary.version}</artifactId>
				<version>3.0.3</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
			</dependency>


		</dependencies>
	</dependencyManagement>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.amashchenko.maven.plugin</groupId>
					<artifactId>gitflow-maven-plugin</artifactId>
					<version>1.3.1</version>
					<configuration>
						<gitFlowConfig>
							<versionTagPrefix>v</versionTagPrefix>
						</gitFlowConfig>
						<pushRemote>false</pushRemote>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.0</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>


				<!-- Scala Maven -->
				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>scala-maven-plugin</artifactId>
					<version>3.3.1</version>
					<executions>
						<execution>
							<goals>
								<goal>add-source</goal>
								<goal>compile</goal>
								<goal>testCompile</goal>
							</goals>
							<configuration>
								<scalaVersion>${scala.version}</scalaVersion>
								<recompileMode>incremental</recompileMode>
								<useZincServer>true</useZincServer>
								<args>
									<arg>-unchecked</arg>
									<arg>-deprecation</arg>
									<arg>-feature</arg>
									<arg>-dependencyfile</arg>
									<arg>${project.build.directory}/.scala_dependencies</arg>
									<arg>-Xmax-classfile-name</arg>
									<arg>128</arg>
								</args>
								<jvmArgs>
									<jvmArg>-Xms1024m</jvmArg>
									<jvmArg>-Xmx1024m</jvmArg>
									<jvmArg>-XX:PermSize=${PermGen}</jvmArg>
									<jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
									<jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
								</jvmArgs>
								<!--<javacArgs> -->
								<!--<javacArg>-source</javacArg> -->
								<!--<javacArg>${java.version}</javacArg> -->
								<!--<javacArg>-target</javacArg> -->
								<!--<javacArg>${java.version}</javacArg> -->
								<!--<javacArg>-Xlint:all,-serial,-path</javacArg> -->
								<!--</javacArgs> -->

							</configuration>
						</execution>
					</executions>
					<configuration>
						<scalaVersion>${scala.version}</scalaVersion>
						<recompileMode>incremental</recompileMode>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>src/main/scala</source>
									<!-- <source>src/main/scala_${scala.binary.version}</source> -->
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>


				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.18.1</version>
					<configuration>
						<useFile>false</useFile>
						<disableXmlReport>true</disableXmlReport>
						<!-- If you have classpath issue like NoDefClassError,... -->
						<!-- useManifestOnlyJar>false</useManifestOnlyJar -->
						<includes>
							<include>**/*Test.*</include>
							<include>**/*Suite.*</include>
						</includes>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>2.4.3</version>
					<executions>
						<!-- Run shade goal on package phase -->
						<execution>
							<phase>package</phase>
							<goals>
								<goal>shade</goal>
							</goals>
							<configuration>
								<shadedArtifactAttached>true</shadedArtifactAttached>
								<shadedClassifierName>jar-with-dependencies</shadedClassifierName>
								<filters>
									<filter>
										<artifact>*:*</artifact>
										<excludes>
											<exclude>META-INF/*.SF</exclude>
											<exclude>META-INF/*.DSA</exclude>
											<exclude>META-INF/*.RSA</exclude>
										</excludes>
									</filter>
								</filters>
								<transformers>
									<transformer
										implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
									<!-- add Main-Class to manifest file -->
									<!-- <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> -->
									<!-- <mainClass>com.mkyong.core.utils.App</mainClass> -->
									<!-- </transformer> -->
								</transformers>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.6</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
							<configuration>
								<keyname>AKSW</keyname>
								<passphraseServerId>${gpg.keyname}</passphraseServerId>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.8</version>
					<extensions>true</extensions>
					<configuration>
						<serverId>ossrh</serverId>
						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>


	<distributionManagement>
		<!-- <repository> -->
		<!-- <id>ossrh</id> -->
		<!-- <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url> -->
		<!-- </repository> -->
		<repository>
			<id>maven.aksw.internal</id>
			<name>AKSW Release Repository</name>
			<url>http://maven.aksw.org/archiva/repository/internal</url>
		</repository>

		<snapshotRepository>
			<id>maven.aksw.snapshots</id>
			<name>AKSW Snapshot Repository</name>
			<url>http://maven.aksw.org/archiva/repository/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

</project>
